Removed FancyHologramDisplay and updated hologram APIs
Deleted unused `FancyHologramDisplay` implementations and improved hologram-related APIs for consistency across versions. Introduced streamlined logic for hologram creation, management, and customization, including better handling of hologram capabilities and refactored line implementations.